# MCP-Crypto-T-project-main

./: .env.example  .env.production.example  .gitignore  API_DOCUMENTATION.md  ARCHITECTURE_DECISION.md  BUG_FIXES_AND_RESULTS.md  CHANGELOG.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.2025  Dockerfile.production  ENTERPRISE_2025_COMPLIANCE_REPORT.md  GITHUB_READY.md  INFRASTRUCTURE_VALIDATION_REPORT.md  MCP_COMPLIANCE_REPORT.md  QUICK_START_VALIDATED.md  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_DEPLOYMENT_SUMMARY.md  V2.0.0_RELEASE_SUMMARY.md  comprehensive_test.py  debug_mcp_server.py  docker-compose.kaayaan.yml  docker-compose.production.yml  docker-entrypoint.sh  enterprise_compliance_results.json  mcp_crypto_server.py  mcp_enterprise_server.py  mcp_http_server.py  mcp_server.py  mcp_server_standalone.py  n8n_mcp_config.json  package.json  pyproject.toml  requirements.txt  requirements_mcp.txt  simple_test.py  test_core_functionality.py  test_enterprise_compliance.py  test_http_server.py  (+4 more)
.github/workflows/: ci.yml  security.yml
config/: production.py
database/: __init__.py  mongo_client.py  postgres_client.py  redis_client.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DOCKER_DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  N8N_INTEGRATION.md  N8N_INTEGRATION_GUIDE.md  PRODUCTION_DEPLOYMENT.md  README.md  UPGRADE_SUMMARY_2025.md  research_2025_dependencies.md
infrastructure/: alert_manager.py  backtester.py  database_manager.py  kaayaan_factory.py  market_scanner.py  portfolio_tracker.py  risk_manager.py
init-scripts/mongodb/: init-crypto-db.js
init-scripts/postgresql/: init-crypto-db.sql
integrations/: __init__.py
models/: kaayaan_models.py
scripts/: health_check.py  start_mcp_server.sh  start_server.sh  validate_build.sh  validate_infrastructure.py  validate_mcp_setup.py
src/clients/: binance_client.py  coingecko_client.py  coinmarketcap_client.py
src/core/: crypto_analyzer.py  technical_indicators.py
tests/: test_mcp_server.py
workflows/: __init__.py
